change background color and fix spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
 .result {
   display: none;
 }
+h1 {
+  margin-bottom: 100px;
+  margin-top: 50px;
+}
+h3 {
+  margin-top: 50px;
+}
+#submit {
+  margin-top: 50px;
+}
+input {
+margin-left: 20px;
+margin-right: 5px;
+}
+body {
+  background-color: lightblue;
+}
